# starters

./: .gitignore  README.md  activate.sh
airflow/: README.md
elastalert/: INFO  Makefile  README.md  metadata.yml  pyproject.toml
elastalert/custom_alerter/: .gitignore  README.md  setup.py
elastalert/custom_alerter/example_configs/rule/: config.yaml  rule.yaml
elastalert/custom_modules/: .gitignore  Makefile  README.md  setup.py
elastalert/custom_modules/example_configs/alert/: rule.yaml
elastalert/custom_modules/example_configs/enhancement/: rule.yaml
elastalert/custom_modules/example_configs/rule/: config.yaml  rule.yaml
elastalert/custom_modules/example_configs/rule_loader/: config.yaml  rule.yaml
elastalert/custom_modules/example_configs/suspect_name_detection/: config.yaml  rule.yaml
elastalert/custom_modules/punch_plugins/suspect_name_detection/: alert_stdout.py  detect_suspect_name.py  find_country_by_name.py
elastalert/elastalert_modules/alerter/: stdout.py
elastalert/elastalert_modules/enhancement/: discover_country.py
elastalert/elastalert_modules/rule_loader/: s3_loader.py
elastalert/elastalert_modules/rules/: suspect_name.py
elastalert/test/: config_s3_loader.yaml
elastalert/tests/custom_test/: config_test.yaml  push_data_to_es.sh  push_rules_to_s3.sh
elastalert/tests/custom_test/data/: customers1.json  customers3.json
elastalert/tests/custom_test/rules/: suspect_name.yaml
elastalert/tests/from_doc_store/: config_test.yaml  ingest.sh
elastalert/tests/from_s3/: config_s3_loader.yaml  ingest.sh  test.sh
kube/: Dockerfile  (+1 more)
(+365 files in other folders)
